--- a/Assessment_template.tex
+++ b/Assessment_template.tex
@@ -770,14 +770,14 @@ at-sea hake fleet, and surveys.
 Prior to 1966, the Pacific ocean perch resource off of the northern
 portion of the U.S. West Coast was harvested almost entirely by Canadian
 and United States vessels. Harvest was negligible prior to 1940, reached
-\hl{1,000} mt in 1951, \hl{3,000} mt in 1961 and exceeded \hl{7,000} mt
-in 1965. Catches increased dramatically after 1965, with the
-introduction of large distant-water fishing fleets from the Soviet Union
-and Japan. Both nations employed large factory stern trawlers as their
-primary method for harvesting Pacific ocean perch. Peak removals by all
-foreign nations combined are estimated at over \hl{15,000} mt in 1966
-and remained over \hl{12,000} mt in 1967. These numbers are based upon a
-re-analysis of the foreign catch data (Rogers
+1,300 mt in 1950, 3,200 mt in 1961 and exceeded 7,600 mt in 1965.
+Catches increased dramatically after 1965, with the introduction of
+large distant-water fishing fleets from the Soviet Union and Japan. Both
+nations employed large factory stern trawlers as their primary method
+for harvesting Pacific ocean perch. Peak removals by all foreign nations
+combined are estimated at over 15,000 mt in 1966 and remained over
+12,000 mt in 1967. These numbers are based upon a re-analysis of the
+foreign catch data (Rogers
 \protect\hyperlink{ref-rogers_species_2003}{2003}), which focused on
 deriving a more realistic species composition for catches previously
 identified only as Pacific ocean perch. Catches declined rapidly
@@ -786,8 +786,8 @@ considered to be severely depleted throughout the Oregon-Vancouver
 Island region by 1969 (Gunderson
 \protect\hyperlink{ref-gunderson_population_1977}{1977}, Gunderson et
 al. \protect\hyperlink{ref-gunderson_status_1977}{1977}). Landed harvest
-averaged \hl{1,500} mt over the period 1977-94. Landings have continued
-to decline since 1994, primarily due to more restrictive management.
+averaged 1,350 mt over the period 1977-94. Landings have continued to
+decline since 1994, primarily due to more restrictive management.
 
 Prior to 1977, Pacific ocean perch in the northeast Pacific were managed
 by the Canadian Government in its waters and by the individual states in
@@ -839,7 +839,7 @@ sole, thornyhead and sablefish) survey, was expanded to other groundfish
 in 1999 (referred to as the `NWFSC Slope Survey'). In 2003, this survey
 was expanded spatially to include the shelf. This last survey, conducted
 by the NWFSC, continues to cover depths from 30-700 fathoms (55-1280
-meters) on an annual basis (referred to as the `NWFSC Slope/Shelf
+meters) on an annual basis (referred to as the `NWFSC shelf-slope
 Survey').
 
 \subsection{Map}\label{map}
@@ -851,14 +851,7 @@ fisheries or data collection strata is provided in Figure
 \subsection{Life History and Ecosystem
 Considerations}\label{life-history-and-ecosystem-considerations}
 
-\hl{Include: Ecosystem considerations (e.g., ecosystem role and trophic relationships of 
-the species, habitat requirements/preferences, relevant data on ecosystem processes 
-that may affect stock or parameters used in the stock assessment, and/or cross-FMP 
-interactions with other fisheries). This section should note if environmental 
-correlations or food web interactions were incorporated into the assessment model. 
-The length and depth of this section would depend on availability of data and reports 
-from the IEA, expertise of the STAT, and whether ecosystem factors are informational 
-to contribute quantitative information to the assessment.}
+\hl{Include: Ecosystem considerations (e.g., ecosystem role and trophic relationships of  the species, habitat requirements/preferences, relevant data on ecosystem processes  that may affect stock or parameters used in the stock assessment, and/or cross-FMP  interactions with other fisheries). This section should note if environmental  correlations or food web interactions were incorporated into the assessment model.  The length and depth of this section would depend on availability of data and reports  from the IEA, expertise of the STAT, and whether ecosystem factors are informational  to contribute quantitative information to the assessment.}
 
 \subsection{Fishery Information}\label{fishery-information}
 
@@ -891,8 +884,8 @@ Include if necessary.
 \subsection{Data}\label{data}
 
 Data used in the Pacific ocean perch assessment are summarized in Figure
-\ref{fig:data_plot}.\\
-A description of each data source is below.
+\ref{fig:data_plot}. A description of each data source is provided
+below.
 
 \subsubsection{Commercial Fishery
 Landings}\label{commercial-fishery-landings}
@@ -900,24 +893,30 @@ Landings}\label{commercial-fishery-landings}
 \textbf{Washington}
 
 Historical commercial fishery landigns of Pacific ocean perch from
-Washington for the years 1918-1980 were obtained from Theresa Tsou
+Washington for the years 1918-2016 were obtained from Theresa Tsou
 (WDFW) and Phillip Weyland (WDFW). This assessment is the first Pacific
 ocean perch assessment to include a state provide historical catch
 reconstruction and hence, the historical catches for Washington vary
-markedly from those used in the 2011 assessment. Recent landings
-(1981-2016) were obtained from PacFIN (Pacific Fisheries Information
-Network (PacFIN) retrieval dated \hl{March 3, 2015}, Pacific States
-Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
+markedly from those used in the 2011 assessment. Due to Recent landings
+(1981-2016) were obtained directly from Washington state rather than
+from PacFIN (Pacific Fisheries Information Network (PacFIN) due to
+identified missing catches not available within PacFIN for Pacific ocean
+perch.
 
 \textbf{Oregon}
 
 Historical commercial fishery landings of Pacific ocean perch from
 Oregon for the years 1892-1986 were obtained from Alison Dauble (ODFW).
-A description of the methods can be found in (Karnowski et al.
-\protect\hyperlink{ref-karnowski_historical_2014}{2014}). Recent
-landings (1987-2016) were obtained from PacFIN (Pacific Fisheries
-Information Network (PacFIN) retrieval dated \hl{March 3, 2015}, Pacific
-States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
+A description of the methods can be found in Karnowski et al.
+(\protect\hyperlink{ref-karnowski_historical_2014}{2014}). Recent
+landings (1987-2016) were obtained from PacFIN retrieval dated
+\hl{March 3, 2015}, Pacific States Marine Fisheries Commission,
+Portland, Oregon; www.psmfc.org). The catch data in from the POP and
+POP2 categories contained within PacFIN for Pacific ocean perch were
+used for this assessment. Additional cathes from 1987-1999 for Pacific
+ocean perch under the UROCK category not yet available in PacFIN were
+received directly from the state and combined with the catch data
+available for that period within PacFIN.
 
 \textbf{California}
 
@@ -952,16 +951,18 @@ have been observed and sampled.
 From the 1960s through the early 1970s, foreign trawling enterprises
 harvested considerable amounts of rockfish off Washington and Oregon,
 and along with the domestic trawling fleet, landed large quantities of
-`r spp'. Foreign catches of individual species were estimated by Rogers
-(\protect\hyperlink{ref-rogers_species_2003}{2003}) and attributed to
-INPFC areas for the years of 1966-1976 for `r spp'. The foreign catches
-were combined across areas for a coastwide removal total.
+Pacific ocean perch. Foreign catches of individual species were
+estimated by Rogers (\protect\hyperlink{ref-rogers_species_2003}{2003})
+and attributed to INPFC areas for the years of 1966-1976 for Pacific
+ocean perch. The foreign catches were combined across areas for a
+coastwide removal total.
 
 \textbf{Discards}
 
-\textbf{\emph{Pikitch Study}}
-
-The Pikitch study was conducted between 1985 and 1987 (Pikitch et al.
+Data on discards of Pacific ocean perch are available from two different
+data sources. The earliest source is called the Pikitch data and comes
+from a study organized by Ellen Pikitch that collected trawl discards
+from 1985-1987 (Pikitch et al.
 \protect\hyperlink{ref-pikitch_evaluation_1988}{1988}). The northern and
 southern boundaries of the study were \(48^\circ 42^\prime\) N latitude
 and \(42^\circ 60^\prime\) N. latitude respectively, which is primarily
@@ -969,18 +970,46 @@ within the Columbia INPFC area (Pikitch et al.
 \protect\hyperlink{ref-pikitch_evaluation_1988}{1988} , Rogers and
 Pikitch \protect\hyperlink{ref-rogers_numerical_1992}{1992}).
 Participation in the study was voluntary and included vessels using
-bottom, midwater, and shrimp trawl gears.\\
-Observers of normal fishing operations on commercial vessels collected
-the data, estimated the total weight of the catch by tow and recorded
-the weight of species retained and discarded in the sample.
+bottom, midwater, and shrimp trawl gears. Observers of normal fishing
+operations on commercial vessels collected the data, estimated the total
+weight of the catch by tow and recorded the weight of species retained
+and discarded in the sample. Results of the Pikitch data were obtained
+from John Wallace (NWFSC, personal communication) in the form of ratios
+of discard weight to retained weight of Pacific ocean perch and
+sex-specific length frequencies. Discard estimates are shown in Table
+\ref{tab:Discard}. Length compositions for discards show a wide range of
+sizes being discarded, with a \hl{ peak are XX cm (Cite figure).}
 
-\textbf{\emph{West Coast Groundfish Observer Program}}
+The second source is from the West Coast Groundfish Observer Program
+(WCGOP). This program is part of the NWFSC and has been recording
+discard observations since 2003. Table \ref:\{tab:Discard\} shows the
+discard ratios of Pacific ocean perch from the WCGOP. Since 2011, when
+the trawl rationalization proram was implemented, observer coverage
+rates increased to nearly 100\% for all the limited entry trawl vessels
+in the program and discard rates declined compared to pre-2011 rates.
+Discard rates were obtained for both the catch-share and the non-catch
+share sector for Pacific ocean perch. A single discard rate was
+calculated by weighting discard rates based on the commercial landings
+by each sector. Discard length composition for the trawl fleet varied by
+year, with larger fish being discarded prior to 2011 (Figure
+\ref{fig:WCGOP_discard}).
 
 \subsubsection{Abundance Indices}\label{abundance-indices}
 
 \subsubsection{Fishery-Dependent Data:}\label{fishery-dependent-data}
 
 \textbf{Historical Commercial Catch-per-unit effort}
+
+Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery
+were combined for the INPFC Vancouver and Columbia areas
+(\ref{tab:CPUE_Summary} from Gunderson
+(\protect\hyperlink{ref-gunderson_population_1977}{1977})). Although
+these data reflect catch rates for the US fleet, the highest catch rates
+coincided with the beginning of removals by the foreign fleet. This
+suggest that, barring unaccounted changes in fishing efficiency during
+this period, the level of abundance was high at that time. A CV of 0.40
+was used in this assessment to be consistent with the CV observed in the
+survey data.
 
 \subsubsection{Fishery-Independent
 Data:}\label{fishery-independent-data}
@@ -1000,9 +1029,17 @@ small number (\textasciitilde{}700) of cells from a very large
 population of possible cells (greater than 11,000) distributed from the
 Mexican to the Canadian border.
 
-\hl{describe VAST}
+The data from the NWFSC shelf-slope survey was analyzed using a spatial
+delta-generalized linear mixed model (delta-GLMM) ({\textbf{???}}).
+Predicted fish biomass density is derived as the product of a ``delta''
+portion for the probability of a non-zero catch and a second portion for
+the magnitude of the non-zero catches. Further, the geostatistical GLMM
+framework can accommodate spatial autocorrelation. Additional
+information about the approach and the software package it is
+implemented in are available from www.fishstats.org. \hl{describe VAST}
 
-The estimated index of abundance is shown in \ref{tab:Index_Summary}.
+The estimated index of abundance is shown in Table
+\ref{tab:Index_Summary}.
 
 \textbf{Northwest Fisheries Science Center (NWFSC) slope survey}
 
@@ -1011,7 +1048,8 @@ to 1280 m north of \(34^\circ 30^\prime\) S, which is near Point
 Conception. The survey strata used to expand the biomass data for this
 assessment are shown in \hl{Table 5}.
 
-The estimated index of abundance is shown in \ref{tab:Index_Summary}.
+The estimated index of abundance is shown in Table
+\ref{tab:Index_Summary}.
 
 \textbf{Alaska Fisheries Science Center (AFSC) slope survey}
 
@@ -1021,15 +1059,15 @@ occurred during 1988-96 and complete coverage (north of
 \(34^\circ 30^\prime\) S) during 1997, 1999, 2000, and 2001. Only the
 four years of consistent and complete surveys plus 1996, which surveyed
 north of \(43^\circ\) N latitude to the U.S.-Canada border, were used in
-this assessment. The number of tows ranged from
-\hl{8 in 2001 to 26 in 1996 (Table 7)}. The numbers of tows with length
-data for `r spp' are also shown in \hl{Table 7}.
-\hl{Because a large number of positive tows occurred in 1996}, it was
-decided to include that year, which surveyed from \(43^\circ\) N
-latitude to the U.S.-Canada border. Therefore, only tows from
-\(43^\circ\) N latitude to the U.S.-Canada border were used.
+this assessment. The number of tows with length data ranged from 19 in
+2000 to 48 in 1996 \ref{tab:AFSC_Lengths}. Because a large number of
+positive tows occurred in 1996, it was decided to include that year,
+which surveyed from \(43^\circ\) N latitude to the U.S.-Canada border.
+Therefore, only tows from \(43^\circ\) N latitude to the U.S.-Canada
+border were used.
 
-The estimated index of abundance is shown in \ref{tab:Index_Summary}.
+The estimated index of abundance is shown in Table
+\ref{tab:Index_Summary}.
 
 \textbf{Triennial Bottom Trawl Survey}
 
@@ -1070,13 +1108,14 @@ assessments.
 
 \hl{Describe whether the time-series was split or retained as one index}
 
-The estimated index of abundance is shown in \ref{tab:Index_Summary}.
+The estimated index of abundance is shown in Table
+\ref{tab:Index_Summary}.
 
 \textbf{Pacific ocean perch Survey}
 
 A survey targeted designed to sample Pacific ocean perch was conducted
 in 1979 and again in 1985. The estimated index of abundance is shown in
-\ref{tab:Index_Summary}.
+Table \ref{tab:Index_Summary}.
 
 \subsubsection{Biological Parameters and
 Data}\label{biological-parameters-and-data}
@@ -1098,7 +1137,7 @@ with brief descriptions below:
   \item Trienial Survey: 1980, 1983, 1986, 1989, 1992, 1995, 1998, 2001, 2004
   \item AFSC Slope Survey: 1996-2001
   \item NWFS Slope Survey: 2001-2002
-  \item NWFSC Shelf/Slope Survey: 2003-2016
+  \item NWFSC Shelf-Slope Survey: 2003-2016
 \end{itemize}
 
 \emph{Commercial: PacFIN}
@@ -1168,7 +1207,7 @@ within 5\% of 1:1 by either length or age (Figure \ref{fig:sexratio} and
 \ref{fig:sexratio_Age}), and hence this assessment the sex ratio at
 birth was assumed to be 1:1. This assessment assumed a logistic
 maturity-at-length curve based on analysis of 537 fish maturity samples
-collected from the NWFSC Slope/Shelf survey. This is revised from the
+collected from the NWFSC shelf-slope survey. This is revised from the
 previous assessment which assumed maturity-at-age based on the work of
 Hannah and Parker (Hannah and Parker
 \protect\hyperlink{ref-hannah_age-modulated_2007}{2007}). Additionally,
@@ -1792,7 +1831,7 @@ Year & Tows & Fish & Sample Size \\
 
 \begin{table}[ht]
 \centering
-\caption{Summary of NWFSC shelf/slope survey length samples used in the stock assessment.} 
+\caption{Summary of NWFSC shelf-slope survey length samples used in the stock assessment.} 
 \label{tab:NWcombo_Lengths}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
@@ -1897,7 +1936,7 @@ Year & Tows & Fish & Sample Size \\
 
 \begin{table}[ht]
 \centering
-\caption{Summary of NWFSC shelf/slope survey age samples used in the stock assessment.} 
+\caption{Summary of NWFSC shelf-slope survey age samples used in the stock assessment.} 
 \label{tab:NWFcombo_Ages}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
@@ -1956,7 +1995,7 @@ Year & Obs & SE \\
 \label{tab:Index_Summary}
 \begin{tabular}{>{\centering}p{.4in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}}
   \hline
-  & \multicolumn{2}{c}{POP} & \multicolumn{2}{c}{Triennial} & \multicolumn{2}{c}{AFSC Slope} & \multicolumn{2}{c}{NWFSC Slope} & \multicolumn{2}{c}{NWFSC Shelf/Slope} \\
+  & \multicolumn{2}{c}{POP} & \multicolumn{2}{c}{Triennial} & \multicolumn{2}{c}{AFSC Slope} & \multicolumn{2}{c}{NWFSC Slope} & \multicolumn{2}{c}{NWFSC Shelf-Slope} \\
  Year & Obs & SE & Obs & SE & Obs & SE & Obs & SE & Obs & SE\\
  \hline
 1979 & 36977 & 0.47 & - & - & - & - & - & - & - & - \\ 
@@ -2384,6 +2423,13 @@ stratification. \label{fig:boundary_map}}
 \FloatBarrier
 
 \FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{Figures/discardLengthComps.png}
+\caption{Discard length frequency distributions from the WCGOP for
+Pacific ocean perch. \label{fig:WCGOP_discard}}
+\end{figure}
 
 \FloatBarrier
 
