--- a/Assessment_template.Rmd
+++ b/Assessment_template.Rmd
@@ -425,64 +425,26 @@ along with records from foreign fisheries, the at-sea hake fleet, and surveys.
 
 Prior to 1966, the `r spp` resource off of the northern portion of the U.S. West Coast was
 harvested almost entirely by Canadian and United States vessels. Harvest was negligible prior to 1940,
-reached \hl{1,000} mt in 1951, \hl{3,000} mt in 1961 and exceeded \hl{7,000} mt in 1965. Catches increased
+reached 1,300 mt in 1950, 3,200 mt in 1961 and exceeded 7,600 mt in 1965. Catches increased
 dramatically after 1965, with the introduction of large distant-water fishing fleets from the Soviet Union
 and Japan. Both nations employed large factory stern trawlers as their primary method for harvesting
-Pacific ocean perch. Peak removals by all foreign nations combined are estimated at over \hl{15,000} mt in
-1966 and remained over \hl{12,000} mt in 1967. These numbers are based upon a re-analysis of the foreign
+Pacific ocean perch. Peak removals by all foreign nations combined are estimated at over 15,000 mt in
+1966 and remained over 12,000 mt in 1967. These numbers are based upon a re-analysis of the foreign
 catch data [@rogers_species_2003], which focused on deriving a more realistic species composition for catches
 previously identified only as `r spp`. Catches declined rapidly following these peak years,
 and `r spp` stocks were considered to be severely depleted throughout the Oregon-Vancouver Island region by 1969 
-[@gunderson_population_1977; @gunderson_status_1977]. Landed harvest averaged \hl{1,500} mt over the period 1977-94. 
+[@gunderson_population_1977; @gunderson_status_1977]. Landed harvest averaged 1,350 mt over the period 1977-94. 
 Landings have continued to decline since 1994, primarily due to more restrictive management.
 
-Prior to 1977, `r spp` in the northeast Pacific were managed by the Canadian
-Government in its waters and by the individual states in waters off of the United States. With
-implementation of the Magnuson Fishery Conservation and Management Act (MFCMA) in 1977, U.S.
-territorial waters were extended to 200 miles from shore, and primary responsibility for management of
-the groundfish stocks off Washington, Oregon and California shifted from the states to the Pacific Fishery
-Management Council (PFMC) and the National Marine Fisheries Service (NMFS). At that time, however,
-a Fishery Management Plan (FMP) for the west coast groundfish stocks had not yet been approved. In the
-interim, the state agencies worked with the PFMC to address conservation issues. In 1981, the PFMC
-adopted a management strategy to rebuild the depleted Pacific ocean perch stocks to levels that would
-produce Maximum Sustainable Yield (MSY) within 20 years. On the basis of cohort analysis [@gunderson_results_1978], 
-the PFMC set Acceptable Biological Catch (ABC) levels at 600 mt for the US portion of the
-Vancouver INPFC area and 950 mt for the Columbia INPFC area. To implement this strategy, the states
-of Oregon and Washington each established landing limits for Pacific ocean perch. Trawl trip limits of
-various forms remained in effect through 2010 (\hl{Table 1}).
+Prior to 1977, `r spp` in the northeast Pacific were managed by the Canadian Government in its waters and by the individual states in waters off of the United States. With implementation of the Magnuson Fishery Conservation and Management Act (MFCMA) in 1977, U.S. territorial waters were extended to 200 miles from shore, and primary responsibility for management of the groundfish stocks off Washington, Oregon and California shifted from the states to the Pacific Fishery Management Council (PFMC) and the National Marine Fisheries Service (NMFS). At that time, however, a Fishery Management Plan (FMP) for the west coast groundfish stocks had not yet been approved. In the interim, the state agencies worked with the PFMC to address conservation issues. In 1981, the PFMC adopted a management strategy to rebuild the depleted Pacific ocean perch stocks to levels that would produce Maximum Sustainable Yield (MSY) within 20 years. On the basis of cohort analysis [@gunderson_results_1978],  the PFMC set Acceptable Biological Catch (ABC) levels at 600 mt for the US portion of the Vancouver INPFC area and 950 mt for the Columbia INPFC area. To implement this strategy, the states of Oregon and Washington each established landing limits for Pacific ocean perch. Trawl trip limits of various forms remained in effect through 2010 (\hl{Table 1}).
 
-Age estimates for `r spp` prior to the 1980s were made via surface ageing of otoliths, which
-misses the very tight annuli at the edge of the otolith once the fish reaches near maximum size. Ages are
-biased by around age 10-12, and maximum age was estimated to be in the 20s, which lead to an
-overestimate of the natural mortality rate and the productivity of the stock. Using break and burn
-methods, `r spp` have been aged to over 100 years, and we now know that the underlying
-assumptions of the early models were overly optimistic about productivity.
-Research surveys have been used to provide fishery-independent information about the abundance,
-distribution, and biological characteristics of `r spp`. A coast-wide survey of the rockfish
-resource was conducted in 1977 [@gunderson_distribution_1980] and was repeated every three years
-through 2004 (referred to as the 'Triennial Survey'). The National Marine Fisheries Service (NMFS) coordinated a cooperative research survey
-of the `r spp` stocks off Washington and Oregon with the Washington Department of
-Fisheries (WDFW) and the Oregon Department of Fish and Wildlife (ODFW) in March-May 1979
-[@wilkins_condition_1983]. This survey was repeated in 1985 (referred to as the `r spp` Survey). Two slope surveys have been conducted
-on the West Coast in recent years, one using the research vessel Miller Freeman, which ended in 2001 (referred to as the 'AFSC Slope Survey'), and
-another ongoing cooperative survey using commercial fishing vessels which began in 1998 as a DTS
-(Dover sole, thornyhead and sablefish) survey, was expanded to other groundfish in 1999 (referred to as the 'NWFSC Slope Survey'). In 2003, this
-survey was expanded spatially to include the shelf. This last survey, conducted by the NWFSC, continues
-to cover depths from 30-700 fathoms (55-1280 meters) on an annual basis (referred to as the 'NWFSC Slope/Shelf Survey').
+Age estimates for `r spp` prior to the 1980s were made via surface ageing of otoliths, which misses the very tight annuli at the edge of the otolith once the fish reaches near maximum size. Ages are biased by around age 10-12, and maximum age was estimated to be in the 20s, which lead to an overestimate of the natural mortality rate and the productivity of the stock. Using break and burn methods, `r spp` have been aged to over 100 years, and we now know that the underlying assumptions of the early models were overly optimistic about productivity. Research surveys have been used to provide fishery-independent information about the abundance, distribution, and biological characteristics of `r spp`. A coast-wide survey of the rockfish resource was conducted in 1977 [@gunderson_distribution_1980] and was repeated every three years through 2004 (referred to as the 'Triennial Survey'). The National Marine Fisheries Service (NMFS) coordinated a cooperative research survey of the `r spp` stocks off Washington and Oregon with the Washington Department of Fisheries (WDFW) and the Oregon Department of Fish and Wildlife (ODFW) in March-May 1979 [@wilkins_condition_1983]. This survey was repeated in 1985 (referred to as the `r spp` Survey). Two slope surveys have been conducted on the West Coast in recent years, one using the research vessel Miller Freeman, which ended in 2001 (referred to as the 'AFSC Slope Survey'), and another ongoing cooperative survey using commercial fishing vessels which began in 1998 as a DTS (Dover sole, thornyhead and sablefish) survey, was expanded to other groundfish in 1999 (referred to as the 'NWFSC Slope Survey'). In 2003, this survey was expanded spatially to include the shelf. This last survey, conducted by the NWFSC, continues to cover depths from 30-700 fathoms (55-1280 meters) on an annual basis (referred to as the 'NWFSC shelf-slope Survey').
 
 ##Map
-A map showing the scope of the assessment and depicting boundaries for fisheries or 
-data collection strata is provided in Figure \ref{fig:boundary_map}.
+A map showing the scope of the assessment and depicting boundaries for fisheries or  data collection strata is provided in Figure \ref{fig:boundary_map}.
 
 ##Life History and Ecosystem Considerations
-\hl{Include: Ecosystem considerations (e.g., ecosystem role and trophic relationships of 
-the species, habitat requirements/preferences, relevant data on ecosystem processes 
-that may affect stock or parameters used in the stock assessment, and/or cross-FMP 
-interactions with other fisheries). This section should note if environmental 
-correlations or food web interactions were incorporated into the assessment model. 
-The length and depth of this section would depend on availability of data and reports 
-from the IEA, expertise of the STAT, and whether ecosystem factors are informational 
-to contribute quantitative information to the assessment.}
+\hl{Include: Ecosystem considerations (e.g., ecosystem role and trophic relationships of  the species, habitat requirements/preferences, relevant data on ecosystem processes  that may affect stock or parameters used in the stock assessment, and/or cross-FMP  interactions with other fisheries). This section should note if environmental  correlations or food web interactions were incorporated into the assessment model.  The length and depth of this section would depend on availability of data and reports  from the IEA, expertise of the STAT, and whether ecosystem factors are informational  to contribute quantitative information to the assessment.}
 
 
 ##Fishery Information
@@ -513,8 +475,7 @@ Include if necessary.
 #Assessment
 
 ##Data
-Data used in the `r spp` assessment are summarized in Figure \ref{fig:data_plot}.  
-A description of each data source is below.
+Data used in the `r spp` assessment are summarized in Figure \ref{fig:data_plot}. A description of each data source is provided below.
 
 
 <!-- ************FISHERY-DEPENDENT DATA************************************ -->
@@ -538,22 +499,13 @@ Catches of `r spp` are monitored aboard the vessel by observers in the At-Sea ha
 
 **Foreign**
 
-From the 1960s through the early 1970s, foreign trawling enterprises harvested considerable amounts of rockfish off Washington and Oregon, and along with the domestic trawling fleet, landed large quantities of 'r spp'. Foreign catches of individual species were estimated by @rogers_species_2003 and attributed to INPFC areas for the years of 1966-1976 for 'r spp'. The foreign catches were combined across areas for a coastwide removal total.
+From the 1960s through the early 1970s, foreign trawling enterprises harvested considerable amounts of rockfish off Washington and Oregon, and along with the domestic trawling fleet, landed large quantities of `r spp`. Foreign catches of individual species were estimated by @rogers_species_2003 and attributed to INPFC areas for the years of 1966-1976 for `r spp`. The foreign catches were combined across areas for a coastwide removal total.
 
 **Discards**
 
-***Pikitch Study*** 
+Data on discards of `r spp` are available from two different data sources.  The earliest source is called the Pikitch data and comes from a study organized by Ellen Pikitch that collected trawl discards from 1985-1987 [@pikitch_evaluation_1988].  The northern and southern boundaries of the study were $48^\circ 42^\prime$ N latitude and $42^\circ 60^\prime$ N. latitude respectively, which is primarily within the Columbia INPFC area [@pikitch_evaluation_1988 ; @rogers_numerical_1992].  Participation in the study was voluntary and included vessels using bottom, midwater, and shrimp trawl gears.  Observers of normal fishing operations on commercial vessels collected the data, estimated the total weight of the catch by tow and recorded the weight of species retained and discarded in the sample.  Results of the Pikitch data were obtained from John Wallace (NWFSC, personal communication) in the form of ratios of discard weight to retained weight of `r spp` and sex-specific length frequencies.  Discard estimates are shown in Table \ref{tab:Discard}.  Length compositions for discards show a wide range of sizes being discarded, with a \hl{ peak are XX cm (Cite figure).}  
 
-The Pikitch study was conducted between 1985 and 1987 [@pikitch_evaluation_1988].  The northern 
-and southern boundaries of the study were $48^\circ 42^\prime$ N latitude and 
-$42^\circ 60^\prime$ N. latitude respectively, which is primarily within the 
-Columbia INPFC area [@pikitch_evaluation_1988 ; @rogers_numerical_1992].  Participation in the study 
-was voluntary and included vessels using bottom, midwater, and shrimp trawl gears.  
-Observers of normal fishing operations on commercial vessels collected the data, 
-estimated the total weight of the catch by tow and recorded the weight of species 
-retained and discarded in the sample.  
-
-***West Coast Groundfish Observer Program***
+The second source is from the West Coast Groundfish Observer Program (WCGOP).  This program is part of the NWFSC and has been recording discard observations since 2003. Table \ref:{tab:Discard} shows the discard ratios of `r spp` from the WCGOP.  Since 2011, when the trawl rationalization proram was implemented, observer coverage rates increased to nearly 100% for all the limited entry trawl vessels in the program and discard rates declined compared to pre-2011 rates.  Discard rates were obtained for both the catch-share and the non-catch share sector for `r spp`.  A single discard rate was calculated by weighting discard rates based on the commercial landings by each sector.  Discard length composition for the trawl fleet varied by year, with larger fish being discarded prior to 2011 (Figure \ref{fig:WCGOP_discard}).
  
 
 
@@ -563,8 +515,8 @@ retained and discarded in the sample.
 
 **Historical Commercial Catch-per-unit effort**
 
+Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas (\ref{tab:CPUE_Summary} from Gunderson [-@gunderson_population_1977]).  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggest that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  A CV of 0.40 was used in this assessment to be consistent with the CV observed in the survey data.
 
-<!-- ************FISHERY-INDPENDENT DATA*********************************** -->
 
 ###Fishery-Independent Data:
 
@@ -572,7 +524,7 @@ retained and discarded in the sample.
 
 The NWFSC shelf-slope survey is based on a random-grid design; covering the coastal waters from a depth of 55 m to 1,280 m [@bradburn_2003_2011]. This design uses four chartered industry vessels in most years, assigned to a roughly equal number of randomly selected grid cells. The survey, which has been conducted from late-May to early-October each year, is divided into two 2-vessel passes of the coast, which are executed from north to south. This design therefore incorporates both vessel-to-vessel differences in catchability as well as variance associated with selecting a relatively small number (~700) of cells from a very large population of possible cells (greater than 11,000) distributed from the Mexican to the Canadian border. 
 
-\hl{describe VAST}
+The data from the NWFSC shelf-slope survey was analyzed using a spatial delta-generalized linear mixed model (delta-GLMM) [@Thorson_comparing_estimates]. Predicted fish biomass density is derived as the product of a "delta" portion for the probability of a non-zero catch and a second portion for the magnitude of the non-zero catches.  Further, the geostatistical GLMM framework can accommodate spatial autocorrelation.  Additional information about the approach and the software package it is implemented in are available from www.fishstats.org. \hl{describe VAST}
 
 The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
 
@@ -585,7 +537,7 @@ The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
 
 **Alaska Fisheries Science Center (AFSC) slope survey**   
 
-The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the U.S. west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys plus 1996, which surveyed north of $43^\circ$ N latitude to the U.S.-Canada border, were used in this assessment. The number of tows ranged from \hl{8 in 2001 to 26 in 1996 (Table 7)}. The numbers of tows with length data for 'r spp' are also shown in \hl{Table 7}. \hl{Because a large number of positive tows occurred in 1996}, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the U.S.-Canada border. Therefore, only tows from $43^\circ$ N latitude to the U.S.-Canada border were used.
+The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the U.S. west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys plus 1996, which surveyed north of $43^\circ$ N latitude to the U.S.-Canada border, were used in this assessment. The number of tows with length data ranged from 19 in 2000 to 48 in 1996 \ref{tab:AFSC_Lengths}.  Because a large number of positive tows occurred in 1996, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the U.S.-Canada border. Therefore, only tows from $43^\circ$ N latitude to the U.S.-Canada border were used.
 
 The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
 
@@ -626,7 +578,7 @@ brief descriptions below:
   \item Trienial Survey: 1980, 1983, 1986, 1989, 1992, 1995, 1998, 2001, 2004
   \item AFSC Slope Survey: 1996-2001
   \item NWFS Slope Survey: 2001-2002
-  \item NWFSC Shelf/Slope Survey: 2003-2016
+  \item NWFSC Shelf-Slope Survey: 2003-2016
 \end{itemize}
 
 
@@ -675,7 +627,7 @@ less than 30 years[@gunderson_population_1977].  Based on break-and-burn method 
 
 **Sex ratio, maturation, and fecundity**
 
-Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by either length or age (Figure \ref{fig:sexratio} and \ref{fig:sexratio_Age}), and hence this assessment the sex ratio at birth was assumed to be 1:1.  This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC Slope/Shelf survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the
+Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by either length or age (Figure \ref{fig:sexratio} and \ref{fig:sexratio_Age}), and hence this assessment the sex ratio at birth was assumed to be 1:1.  This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the
 measured frequency of atretic cells (M. Head, personal communication).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to one for larger fish.
 
 The fecundity-at-age has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was esimtated equal to `r mod1$MGparmAdj$Eggs_scalar_Fem`$L$^`r round(mod1$MGparmAdj$Eggs_exp_wt_Fem,2)`^ in millions of eggs. Spawning output at length is shown in Figure \ref{fig:fecundity}.
@@ -1326,7 +1278,7 @@ assessment team. Not required in draft assessment undergoing review.
 
    # Index of abundance summary, create table   
      Fish_Length.table = xtable(Fish_Length, 
-                                  caption = c('Summary of NWFSC shelf/slope survey length samples used in the stock assessment.'),
+                                  caption = c('Summary of NWFSC shelf-slope survey length samples used in the stock assessment.'),
                                  label = 'tab:NWcombo_Lengths',
                                  digits = 0)    
     # Add alignment  
@@ -1474,7 +1426,7 @@ assessment team. Not required in draft assessment undergoing review.
 
    # Index of abundance summary, create table   
      Fish_Length.table = xtable(Fish_Length, 
-                                  caption = c('Summary of NWFSC shelf/slope survey age samples used in the stock assessment.'),
+                                  caption = c('Summary of NWFSC shelf-slope survey age samples used in the stock assessment.'),
                                  label = 'tab:NWFcombo_Ages',
                                  digits = 0)    
     # Add alignment  
@@ -1583,7 +1535,7 @@ assessment team. Not required in draft assessment undergoing review.
      hlines = c(-1, 0, nrow(Index_Summary))
      addtorow = list()
      addtorow$pos = list(0,0)
-     addtorow$command = c("& \\multicolumn{2}{c}{POP} & \\multicolumn{2}{c}{Triennial} & \\multicolumn{2}{c}{AFSC Slope} & \\multicolumn{2}{c}{NWFSC Slope} & \\multicolumn{2}{c}{NWFSC Shelf/Slope} \\\\\n",
+     addtorow$command = c("& \\multicolumn{2}{c}{POP} & \\multicolumn{2}{c}{Triennial} & \\multicolumn{2}{c}{AFSC Slope} & \\multicolumn{2}{c}{NWFSC Slope} & \\multicolumn{2}{c}{NWFSC Shelf-Slope} \\\\\n",
                           "Year & Obs & SE & Obs & SE & Obs & SE & Obs & SE & Obs & SE\\\\\n")
      Index_summary.table = xtable(Index_Summary, 
                                   caption = c('Summary of the fishery-independant biomass/abundance
@@ -2104,6 +2056,7 @@ assessment team. Not required in draft assessment undergoing review.
 <!-- *****************Commercial Discards FIGURES************************** --> 
 <!-- ********************************************************************** -->
 
+![Discard length frequency distributions from the WCGOP for `r spp`. \label{fig:WCGOP_discard}](Figures/discardLengthComps.png)
 
 
 
